--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,9 @@ body {
 padding-top: 94px; 
 padding-bottom: 94px;
 max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color:rgba(245, 244, 250, 1);
+margin-left: auto;
+margin-right: auto;
+background-color: rgba(245, 244, 250, 1);
  }
 
 .our{
@@ -87,9 +87,7 @@ max-width: 1600px;
  }
  
 .our-icon{
-  
-
-}
+  }
 
 .my_section {
     padding-bottom: 94px;
@@ -142,11 +140,6 @@ max-width: 1600px;
   margin: 0;
 }
 
-.nav-list link:hover,
-.nav-list link:focus {
-  color: #2196f3;
-}
-
 .footer_web {
   color: #2196f3;
   font-family: Raleway;
@@ -174,7 +167,7 @@ max-width: 1600px;
   width: 270px;
 }
 
-.ellips:hover, .ellips:focus{
+.ellips-link:hover, .ellips-link:focus{
  
   background-color: #2196f3;
   border-radius: 100%;
@@ -184,22 +177,28 @@ max-width: 1600px;
   height: 44px;
   padding: 12px;
   margin: 0;
+  outline: none;
   }
 
 
-.ellips:hover .link-icon, .ellips:focus .link-icon  {
+.ellips-link:hover .link-icon, .ellips-link:focus .link-icon  {
   fill:var(--foc-col-white);
   }
 
 .ellips{
   width: 44px;
   height: 44px;
+  
+}
+
+.ellips-link{
+  display: flex;
   background-color:var(--foc-col-white);
-  display: block;
   border-radius: 100%;
   align-items: center;
   justify-content: center;
-  padding: 12px;
+  width: 100%;
+  height: 100%;
 }
 
 .link-icon{
@@ -275,10 +274,6 @@ max-width: 1600px;
 
 
 
-.icon-items{
-  border: 1px solid 
-  rgba(175, 177, 184, 1);
-}li
 
 .any-works .paragraf {
   line-height: 1.875;
@@ -342,10 +337,6 @@ footer {
   display: flex;
  }
 
- .wellkom{
-  margin-left: 70px;
-}
-
 .button_title {
   background-color: rgba(47, 48, 58, 1);
   color: rgb(255, 255, 255);
@@ -372,12 +363,21 @@ footer {
   fill:#2196f3;
 }
 
-
-.mail_link:hover .link ,
-.mail_link:focus .link {
-  color: #2196f3;
+.header-svg{
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
+
+.mail_link:hover .link, .mail_link:focus-within .link{
+  color: var(--foc-col-blu);
+   width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+ }
 
 .command,
 .work-specific {
@@ -437,12 +437,15 @@ footer {
     height: 92px;
     fill: var(--bg-col-grey);
     display: block;
+     border: 1px solid   rgba(175, 177, 184, 1);
+     
    }
 
   .klients-link:focus, .klients-link:hover{
     fill: var(--foc-col-blu);
     border: 1px solid  var(--foc-col-blu);
-  }
+    outline: none;
+      }
 
   .klient-logo{
     max-width: 106px;
@@ -465,7 +468,8 @@ button:hover {
   letter-spacing: normal;
   font-weight: 500;
   text-decoration: none;
- 
+  display: flex;
+  align-items: center;
 }
 
 .link1 {
@@ -665,10 +669,16 @@ address {
   display: block;
 }
 
+.wellkom{
+  margin-left: 70px;
+}
+
 .wellkoms {
-  line-height: 1.15;
   letter-spacing: 0.03em;
-   margin: 0px 0px 20px 0px;
+  margin: 0px 0px 20px 0px;
+  line-height: 1.2;
+  display: flex;
+  align-items: center;
 }
 
 .foot-icon{
@@ -682,29 +692,35 @@ address {
   margin: 0%;
 }
   
+
 .foot-links{
+  width: 44px;
+  height: 44px;
+}
+
+
+.foot-lin{
   background-color:var(--foc-col-whited);
   border-radius: 100%;
   align-items: center;
   justify-content: center;
-  width: 44px;
-  height: 44px;
-  padding: 11px;
+  width: 100%;
+  height: 100%;
   margin: 0;
-  gap: 10px;
+  outline: none;
+  display: flex;
 }
-.foot-links:focus, .foot-links:hover {
+ .foot-lin:hover,.foot-lin:focus  {
   background-color:var(--foc-col-blu);
   border-radius: 100%;
   align-items: center;
   justify-content: center;
-  width: 44px;
-  height: 44px;
-  padding: 11px;
-  margin: 0;
-  gap: 10px;
+  width: 100%;
+  height: 100%;
+  outline: none;
 }
-  
+
+ 
 .fon-fut{
   fill: var(--foc-col-white);
 }
